Fix drum spacing and remove empty link on boredofbeans

--- a/css/main.css
+++ b/css/main.css
@@ -289,9 +289,9 @@ u {
   text-decoration: none;
 }
 
-.project-link:visited {
+/*.project-link:visited {
   color: #fc6fd9;
-}
+}*/
 
 .project-link:visited:hover {
   color: #33e3f5;
